--- a/webpack/package.json
+++ b/webpack/package.json
@@ -13,12 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "core-js": "^3.24.1",
     "sass-loader": "^13.0.2",
     "webpack-cli": "^4.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
+    "@babel/plugin-transform-runtime": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
+    "@vue/preload-webpack-plugin": "^2.0.0",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
@@ -31,7 +34,9 @@
     "postcss-loader": "^7.0.1",
     "postcss-preset-env": "^7.7.2",
     "style-loader": "^3.3.1",
+    "thread-loader": "^3.0.4",
     "webpack": "^5.74.0",
-    "webpack-dev-server": "^4.9.3"
+    "webpack-dev-server": "^4.9.3",
+    "workbox-webpack-plugin": "^6.5.4"
   }
 }
