--- a/webpack/package.json
+++ b/webpack/package.json
@@ -12,6 +12,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+"browserslist":[
+"last 2 version",
+"> 1%",
+"not dead"
+],
   "dependencies": {
     "core-js": "^3.24.1",
     "sass-loader": "^13.0.2",
